# perplexity-web-api-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.ps1  dist-workspace.toml
.github/workflows/: docker.yml  qa.yaml
crates/perplexity-web-api/: Cargo.toml
crates/perplexity-web-api-mcp/: Cargo.toml
crates/perplexity-web-api-mcp/src/: auth.rs  config.rs  main.rs  server.rs  setup.rs  test_utils.rs  tty.rs
crates/perplexity-web-api/examples/: with_cookies.rs  with_file.rs
crates/perplexity-web-api/src/: auth.rs  client.rs  config.rs  error.rs  http.rs  lib.rs  models.rs  parse.rs  types.rs  upload.rs
crates/perplexity-web-api/tests/: integration.rs
docs/: index.html
