[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91"
homepage = "https://github.com/mishamyrt/perplexity-web-api-mcp"
documentation = "https://github.com/mishamyrt/perplexity-web-api-mcp"
repository = "https://github.com/mishamyrt/perplexity-web-api-mcp"
authors = ["Mikhael Khrustik <misha@myrt.co>"]
keywords = ["perplexity", "mcp", "ai", "search"]
license = "MIT"

[workspace.dependencies]
perplexity-web-api = { path = "crates/perplexity-web-api" }

tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "net"] }
rquest = { version = "5.1.0", features = [
    "cookies",
    "json",
    "stream",
    "multipart",
] }
rquest-util = "2.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4"] }
bytes = "1.11.1"
memchr = "2.8.0"
futures-util = "0.3.32"
mime_guess = "2.0.5"
regex-lite = "0.1.9"
base64 = "0.22"
thiserror = "2.0.18"
pin-project-lite = "0.2.17"
rmcp = { version = "1.3.0", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
axum = "0.8.8"
schemars = "1.2.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[workspace.lints.rust]
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(codspeed)",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
large_stack_arrays = "allow"

[profile.release]
lto = "thin"
codegen-units = 5

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
