[package]
name = "perplexity-web-api-mcp"
version = "0.4.1"
description = "MCP server exposing Perplexity AI search, research, and reasoning tools"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[[bin]]
name = "perplexity-web-api-mcp"
path = "src/main.rs"

[dependencies]
perplexity-web-api = { workspace = true, features = ["schemars"] }

tokio = { workspace = true, features = ["signal"] }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
