[package]
name = "perplexity-web-api-mcp"
version = "0.11.0"
description = "MCP server exposing Perplexity AI search, research, and reasoning tools"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[[bin]]
name = "perplexity-web-api-mcp"
path = "src/main.rs"

[features]
default = []
streamable-http = ["dep:axum", "rmcp/transport-streamable-http-server"]

[dependencies]
perplexity-web-api = { workspace = true, features = ["schemars"] }

tokio = { workspace = true, features = ["signal"] }
rmcp = { workspace = true }
axum = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
