[package]
name = "perplexity-web-api"
description = "Async Rust client library for Perplexity AI Web API"
version = "0.0.0"
publish = false
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[features]
default = []
schemars = ["dep:schemars"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
memchr = { workspace = true }
futures-util = { workspace = true }
mime_guess = { workspace = true }
thiserror = { workspace = true }
pin-project-lite = { workspace = true }
rquest = { workspace = true }
rquest-util = { workspace = true }
schemars = { workspace = true, optional = true }
